# talon

./: .gitignore  README.md
command/: README.md
command/talon_depthtest/: CMakeLists.txt  package.xml
command/talon_depthtest/scripts/: depth_commander.py
command/talon_teleop/: CMakeLists.txt  package.xml
command/talon_teleop/scripts/: script.py  talon_joy.py  teleop_joy.py
control/: README.md
control/talon_control/: CMakeLists.txt  package.xml
control/talon_control/nodes/: pid_tester.py  talon_control.py  talon_pid.py
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
drivers/: README.md
drivers/talon_tss/: CMakeLists.txt  README.md  package.xml  setup.py
drivers/talon_tss/scripts/: imu_node.py  test.py  test2.py  threespace_utils.py
embedded/: README.md
embedded/TALON_thruster_driver/: TALON_thruster_driver.ino
embedded/buzzer_test/: buzzer_test.ino
embedded/roomba_motorcontrol/: CMakeLists.txt  README.md  package.xml  roomba_motorcontrol.ino
embedded/talon_bar30/: talon_bar30.ino
embedded/talon_thruster_test/: talon_thruster_test.ino
embedded/talon_thruster_test_teensy/: talon_thruster_test_teensy.ino
embedded/talon_thrusters/: talon_thrusters.ino
talon_test_pkg/: CMakeLists.txt  package.xml
vision/talon_vision/: CMakeLists.txt  package.xml
vision/talon_vision/launch/: qgate.launch  testcam.launch
vision/talon_vision/scripts/: fv_bouy_detect.py  fv_filter_server.py  fv_qgate_detect.py  fv_raw_server.py  vision_node.py
